--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ serde_derive = "1.0.91"
 serde_json = "1.0.39"
 serde_repr = "0.1.4"
 lazy_static = "1.3.0"
+dotenv = "0.14.0"
+uuid = { version = "0.7.4", features = ["v4", "serde"] }
